@@ -1,3 +1,9 @@
+2013-02-18  Miklos Szeredi <miklos@szeredi.hu>
+
+	* fuse_opt_parse(): when storing a newly allocated string for
+	format "%s", free the previous value stored at that location.
+	Reported by Marco Schuster
+
 2013-02-07  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: add readdirplus support in fuse_lowlevel_ops.  Patch by
